# Lakehouse-Prototype

./: .gitignore  README.md  data copy.py  data.py  docker-compose.yml  meta.py
backend/: Dockerfile  Dockerfile.create_table  Dockerfile.event_loader  Dockerfile.flink  Dockerfile.streamlit  MQ_prototype.py  README.md  delete_table.py  main.py  pom.xml  producer.py  pyproject.toml  read.py  requirements.txt
backend/config/: iceberg.py  kafka.py  redis.py  rest.py
backend/database/: iceberg.py  redis.py
backend/db/minIO/data/.minio.sys/: format.json
backend/db/minIO/data/.minio.sys/tmp/.trash/: 091f23db-8633-4a74-a57f-6ccb414dff51  129fc571-eb9b-4b91-993d-a97d00c7a2e9  531c3486-8c3e-492f-b430-e09597ec8f23  53bcd26f-612f-41ca-a77f-138a00cca797  54b39604-bae0-4f07-a720-8dd5ee81517b  563a9970-1d60-4205-bf9d-5cde34f5e786  5697cd00-09a0-4da7-8a10-bee85c509a9c  (+9 more)
backend/db/redis/data/: dump.rdb
backend/db/warehouse/: pyiceberg_catalog.db
backend/mq_redis/: consumer.py  create_table.py  producer.py
backend/routers/: events.py
backend/schemas/: __init__.py  click_event.py  keydown_event.py  mouse_event.py
backend/scripts/: check.py  create_iceberg_tables.py  create_table.py  create_table_minIO.py  create_table_origin.py  create_table_rest.py  success.py
backend/scripts/notebooks/: Untitled-checkpoint.ipynb  Untitled.ipynb
backend/services/: bronze.sql  event_loader.py  flink.sql  gpt.sql  stream_writer.py
backend/st_app/: main.py  meta.py
backend/streamlit/: main.py
backend/tests/: e2e_http_events.js
backend/tests/unit/: test_stream_writer.py
(+352 files in other folders)
