[project]
name = "backend"
version = "0.1.0"
description = "Backend service for event processing pipeline"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    # Web framework
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    # Data processing
    "pyarrow>=21.0.0",
    "pyiceberg[sql-sqlite]>=0.9.1",
    # Messaging / Storage
    "kafka-python>=2.0.2",
    "python-dotenv>=1.1.1",
    "streamlit>=1.47.0",
    "pytest>=8.4.1",
    "trio>=0.30.0",
    "boto3>=1.39.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.pytest.ini_options]
markers = [
    "asyncio: mark test as asyncio"
]
